--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
+    "@typescript-eslint/parser": "6.11.0",
     "eslint": "^8.53.0",
     "eslint-config-next": "14.0.2",
     "eslint-config-prettier": "^8.10.0",
@@ -27,6 +29,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^3.0.3",
+    "prettier-eslint": "^15.0.1",
     "stylelint": "^15.11.0",
     "stylelint-config-clean-order": "^5.2.0",
     "stylelint-config-css-modules": "^4.3.0",
