--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^8.53.0",
     "@types/node": "^20.9.0",
+    "@next/env": "^13.5.6",
+    "@next/bundle-analyzer": "^13.5.6",
+
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "6.11.0",
@@ -37,6 +41,7 @@
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-standard-scss": "^11.1.0",
+    "typescript-plugin-css-modules": "^5.0.2",
     "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^4.0.2",
     "typescript": "^5.2.2"
