--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.53.0",
-    "@types/node": "^20.9.0",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@next/env": "^13.5.6",
     "@next/bundle-analyzer": "^13.5.6",
+    "@next/env": "^13.5.6",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "6.11.0",
+    "clsx": "^2.0.0",
     "eslint": "^8.53.0",
     "eslint-config-next": "14.0.2",
     "eslint-config-prettier": "^8.10.0",
@@ -41,9 +42,9 @@
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-standard-scss": "^11.1.0",
-    "typescript-plugin-css-modules": "^5.0.2",
     "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^4.0.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "typescript-plugin-css-modules": "^5.0.2"
   }
 }
