--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "redux-undo": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^8.53.0",
