--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
-    "redux-undo": "^1.1.0"
+    "redux-undo": "^1.1.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@eslint/js": "^8.53.0",
