--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.16.5",
     "next": "14.0.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "redux-undo": "^1.1.0",
@@ -25,6 +26,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "6.11.0",
