--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.3.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.2",
     "react": "^18.2.0",
