--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^16.3.0",
     "framer-motion": "^10.16.5",
+    "framer-motion-ticker": "^1.0.19",
     "next": "14.0.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
