--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   badges-frontend:
+    restart: always
     build:
       context: /root/badges/frontend
       dockerfile: Dockerfile
