--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - NODE_ENV=production
       - HOSTNAME=0.0.0.0
     networks:
-      - badges-frontend
+      - badges
     volumes:
       - badges-frontend:/app/data
 
@@ -22,4 +22,5 @@ volumes:
   badges-frontend:
 
 networks:
-  badges-frontend:
+  badges:
+    external: true
