--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@hello-pangea/dnd": "^16.3.0",
     "framer-motion": "^10.16.5",
     "framer-motion-ticker": "^1.0.19",
